// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HelpDrawer Analytics event tracking overrides analytics event tracking on open 1`] = `
Array [
  Object {
    "event_extension": "Design system integration",
    "event_name": "help_drawer_opened",
    "heading": "other heading",
  },
]
`;

exports[`HelpDrawer Analytics event tracking sends analytics event when closing help drawer 1`] = `
Array [
  Object {
    "event_extension": "Design system integration",
    "event_name": "help_drawer_closed",
    "heading": "HelpDrawer title",
  },
]
`;

exports[`HelpDrawer Analytics event tracking sends analytics event when heading is non-string 1`] = `
Array [
  Object {
    "event_extension": "Design system integration",
    "event_name": "help_drawer_opened",
    "heading": "Hello World",
  },
]
`;

exports[`HelpDrawer Analytics event tracking sends analytics event when help drawer starts open 1`] = `
Array [
  Object {
    "event_extension": "Design system integration",
    "event_name": "help_drawer_opened",
    "heading": "HelpDrawer title",
  },
]
`;

exports[`HelpDrawer Analytics event tracking sends analytics event when opening help drawer 1`] = `
Array [
  Object {
    "event_extension": "Design system integration",
    "event_name": "help_drawer_opened",
    "heading": "HelpDrawer title",
  },
]
`;

exports[`HelpDrawer renders a snapshot 1`] = `
<DocumentFragment>
  <dialog
    aria-labelledby="drawer--2"
    class="ds-c-help-drawer ds-c-drawer"
    open=""
    role="dialog"
    style="z-index: 100149; top: 384px;"
    tabindex="-1"
  >
    <div
      class="ds-c-drawer__window"
    >
      <div
        class="ds-c-drawer__header"
      >
        <h3
          class="ds-c-drawer__header-heading"
          id="drawer--2"
        >
          HelpDrawer title
        </h3>
        <button
          aria-label="Close help drawer"
          class="ds-c-button ds-c-button--small ds-c-drawer__close-button"
          type="button"
        >
          Close
        </button>
      </div>
      <div
        class="ds-c-drawer__body"
        tabindex="0"
      >
        <p>
          content
        </p>
      </div>
      <div
        class="ds-c-drawer__footer"
      >
        <h4
          class="ds-c-drawer__footer-title"
        >
          Footer title
        </h4>
        <div
          class="ds-c-drawer__footer-body"
        >
          <div>
            <p>
              Some footer content
            </p>
          </div>
        </div>
      </div>
    </div>
  </dialog>
  <div
    class="backdrop"
    style="z-index: 100148;"
  />
  <div
    class="_dialog_overlay"
    style="z-index: 100147;"
  />
</DocumentFragment>
`;
